--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,21 @@
 name = "buildaquery"
 version = "0.1.0"
 description = "A Python-based query builder for PostgreSQL."
-authors = ["Anirudh Bhattacharya anirudhbhattacharya1@gmail.com"]
+authors = ["Anirudh Bhattacharya <anirudhbhattacharya1@gmail.com>"]
 readme = "README.md"
-packages = [{include = "buildaquery"}, {include = "scripts"}]
+packages = [{include = "buildaquery"}]
+license = "MIT"
+repository = "https://github.com/AnirudhB3000/buildaquery"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3 :: Only",
+    "Topic :: Database",
+    "Topic :: Software Development :: Libraries",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -35,3 +47,6 @@ unit-tests = "scripts:run_unit_tests"
 integration-tests = "scripts:run_integration_tests"
 all-tests = "scripts:run_all_tests"
 clean = "scripts:clean_project"
+
+[tool.poetry.urls]
+"Homepage" = "https://github.com/AnirudhB3000/buildaquery"
