--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,21 @@
 services:
-  test_db:
+  test_postgres:
     image: postgres:15
-    container_name: buildaquery_test_db
+    container_name: buildaquery_test_postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: buildaquery_test
     ports:
       - "5433:5432"
+    restart: always
+  test_mysql:
+    image: mysql:8.0
+    container_name: buildaquery_test_mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: buildaquery_test
+    ports:
+      - "3307:3306"
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
