--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "buildaquery"
-version = "0.4.0"
+version = "0.5.0"
 description = "A Python-based query builder for PostgreSQL, SQLite, MySQL, and Oracle."
 authors = ["Anirudh Bhattacharya <anirudhbhattacharya1@gmail.com>"]
 readme = "README.md"
@@ -30,6 +30,7 @@ typing_extensions = "4.15.0"
 tzdata = "2025.3"
 python-dotenv = "^1.2.1"
 oracledb = "^3.4.2"
+pyodbc = "^5.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "9.0.2"
