--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "buildaquery"
-version = "1.1.0"
-description = "A Python-based query builder for PostgreSQL, SQLite, MySQL, and Oracle."
+version = "1.1.2"
+description = "A Python SQL query builder with cross-dialect execution primitives and OLTP support."
 authors = ["Anirudh Bhattacharya <anirudhbhattacharya1@gmail.com>"]
 readme = "README.md"
 packages = [{include = "buildaquery"}]
@@ -37,6 +37,7 @@ mariadb = "^1.1.11"
 pytest = "9.0.2"
 pytest-mock = "3.15.1"
 iniconfig = "2.3.0"
+twine = "^6.1.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -52,6 +53,7 @@ integration-tests = "scripts:run_integration_tests"
 all-tests = "scripts:run_all_tests"
 clean = "scripts:clean_project"
 setup-tests = "scripts:setup_tests"
+package-check = "scripts:run_package_checks"
 
 [tool.poetry.urls]
 "Homepage" = "https://github.com/AnirudhB3000/buildaquery"
